--- a/GitUI/packages.config
+++ b/GitUI/packages.config
@@ -5,4 +5,5 @@
   <package id="Rx-Linq" version="2.2.5" targetFramework="net40-Client" />
   <package id="Rx-Main" version="2.2.5" targetFramework="net40-Client" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net40-Client" />
+  <package id="WPFToolkit" version="3.5.50211.1" targetFramework="net40-client" />
 </packages>
